--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "@cel_cash/core",
-  "version": "1.0.3",
-  "description": "",
-  "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsup",
-    "release": "pnpm release-it"
-  },
-  "files": [
-    "dist"
-  ],
-  "keywords": [],
-  "author": "Walaff Fernandes",
-  "license": "ISC",
-  "devDependencies": {
-    "@swc/core": "^1.5.7",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "@ts-rest/core": "^3.45.2",
-    "zod": "^3.23.8"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "release-it": {
-    "git": false
-  }
+    "name": "@cel_cash/core",
+    "version": "1.0.3",
+    "description": "",
+    "type": "module",
+    "main": "dist/index.cjs",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "build": "tsup",
+        "release": "pnpm release-it"
+    },
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs",
+            "types": "./dist/index.d.ts"
+        },
+        "./types": {
+            "import": "./dist/types.js",
+            "require": "./dist/types.cjs",
+            "types": "./dist/types.d.ts"
+        },
+        "./schemas": {
+            "import": "./dist/schemas/index.js",
+            "require": "./dist/schemas/index.cjs",
+            "types": "./dist/schemas/index.d.ts"
+        }
+    },
+    "files": ["dist"],
+    "keywords": [],
+    "author": "Walaff Fernandes",
+    "license": "ISC",
+    "devDependencies": {
+        "@swc/core": "^1.5.7",
+        "tsup": "^8.0.2",
+        "typescript": "^5.4.5"
+    },
+    "dependencies": {
+        "@ts-rest/core": "^3.45.2",
+        "zod": "^3.23.8"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "release-it": {
+        "git": false
+    }
 }
