chore: Update package.json with @biomejs/biome dependency

--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "cel_cash",
-  "version": "1.0.3",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "release": "pnpm -r release && pnpm release-it"
-  },
-  "keywords": [
-    "SDK",
-    "API",
-    "Celcoin",
-    "Celcash",
-    "typescript",
-    "ts-rest"
-  ],
-  "author": "Walaff Fernandes",
-  "license": "ISC",
-  "devDependencies": {
-    "@release-it/bumper": "^6.0.1",
-    "release-it": "^17.3.0"
-  },
-  "release-it": {
-    "git": {
-      "requireCleanWorkingDir": false
+    "name": "cel_cash",
+    "version": "1.0.3",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "release": "pnpm -r release && pnpm release-it"
+    },
+    "keywords": ["SDK", "API", "Celcoin", "Celcash", "typescript", "ts-rest"],
+    "author": "Walaff Fernandes",
+    "license": "ISC",
+    "devDependencies": {
+        "@biomejs/biome": "1.7.3",
+        "@release-it/bumper": "^6.0.1",
+        "release-it": "^17.3.0"
+    },
+    "release-it": {
+        "git": {
+            "requireCleanWorkingDir": false
+        }
     }
-  }
 }
