chore: update devDependency to @cel_cash/core in package.json

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,7 +37,7 @@
             "@release-it/bumper": {
                 "out": {
                     "file": "package.json",
-                    "path": ["devDependencies.@ts-rest/core"]
+                    "path": ["devDependencies.@cel_cash/core"]
                 }
             }
         }
