--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,8 +19,7 @@
         "@swc/core": "^1.5.7",
         "@types/node": "^20.12.12",
         "tsup": "^8.0.2",
-        "typescript": "^5.4.5",
-        "@ts-rest/core": "1.0.3"
+        "typescript": "^5.4.5"
     },
     "peerDependencies": {
         "@cel_cash/core": "^1.0.0"
