chore: formatting code

--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "scripts": {
         "release": "pnpm -r release && pnpm release-it"
     },
-    "keywords": ["SDK", "API", "Celcoin", "Celcash", "typescript", "ts-rest"],
+    "keywords": [
+        "SDK",
+        "API",
+        "Celcoin",
+        "Celcash",
+        "typescript",
+        "ts-rest"
+    ],
     "author": "Walaff Fernandes",
     "license": "ISC",
     "devDependencies": {
