--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,6 +7,7 @@
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "type-check": "tsc --noEmit",
         "build": "tsup",
         "release": "pnpm release-it"
     },
