chore: update package.json keywords for @cel_cash/client

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,7 +12,7 @@
         "release": "pnpm release-it"
     },
     "files": ["dist"],
-    "keywords": [],
+    "keywords": ["celcash", "client", "sdk", "api", "typescript"],
     "author": "Walaff Fernandes",
     "license": "ISC",
     "devDependencies": {
