--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -5,9 +5,8 @@ on:
     branches: [ main ]
     paths:
       - 'packages/client'
-  pull_request:
-    paths:
-      - 'packages/client'
+
+  workflow_dispatch:
 
 jobs:
   lint:
