--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -42,5 +42,7 @@ jobs:
           cache: 'pnpm'
       - name: Install
         run: pnpm install
+      - name: Build @cel_cash/client dependencies
+        run: pnpm --filter @cel_cash/core build
       - name: Run typecheck
         run: pnpm --filter @cel_cash/client type-check
