--- a/.github/workflows/core.yaml
+++ b/.github/workflows/core.yaml
@@ -4,10 +4,9 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'packages/core'
-  pull_request:
-    paths:
-      - 'packages/core'
+      - 'packages/core/**'
+
+  workflow_dispatch:
 
 jobs:
   lint:
