--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cel_cash/client",
-    "version": "1.0.3",
+    "version": "1.0.5",
     "description": "A client sdk for CelCash",
     "type": "module",
     "main": "dist/index.cjs",
@@ -11,8 +11,16 @@
         "build": "tsup",
         "release": "pnpm release-it"
     },
-    "files": ["dist"],
-    "keywords": ["celcash", "client", "sdk", "api", "typescript"],
+    "files": [
+        "dist"
+    ],
+    "keywords": [
+        "celcash",
+        "client",
+        "sdk",
+        "api",
+        "typescript"
+    ],
     "author": "Walaff Fernandes",
     "license": "ISC",
     "homepage": "https://github.com/Pyxlab/celcash/tree/main/packages/client#readme",
@@ -25,7 +33,7 @@
         "url": "https://github.com/Pyxlab/celcash/issues"
     },
     "devDependencies": {
-        "@cel_cash/core": "workspace:*",
+        "@cel_cash/core": "1.0.5",
         "@swc/core": "^1.5.7",
         "@types/node": "^20.12.12",
         "tsup": "^8.0.2",
@@ -46,7 +54,9 @@
             "@release-it/bumper": {
                 "out": {
                     "file": "package.json",
-                    "path": ["devDependencies.@cel_cash/core"]
+                    "path": [
+                        "devDependencies.@cel_cash/core"
+                    ]
                 }
             }
         }
