chore: update package.json description for @cel_cash/core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@cel_cash/core",
     "version": "1.0.5",
-    "description": "",
+    "description": "Core ts-rest module for CelCash",
     "type": "module",
     "main": "dist/index.cjs",
     "module": "dist/index.js",
@@ -28,10 +28,8 @@
             "types": "./dist/schemas/index.d.ts"
         }
     },
-    "files": [
-        "dist"
-    ],
-    "keywords": [],
+    "files": ["dist"],
+    "keywords": ["celcash", "sdk", "api", "typescript"],
     "author": "Walaff Fernandes",
     "license": "ISC",
     "homepage": "https://github.com/Pyxlab/celcash/tree/main/packages/core#readme",
