--- a/.github/workflows/nest.yaml
+++ b/.github/workflows/nest.yaml
@@ -42,5 +42,7 @@ jobs:
           cache: 'pnpm'
       - name: Install
         run: pnpm install --no-frozen-lockfile
+      - name: Build @cel_cash/client dependencies
+        run: pnpm --filter @cel_cash/core build
       - name: Run typecheck
         run: pnpm --filter @cel_cash/nestjs type-check
