feat: update @cel_cash/core package with new contracts and schemas

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cel_cash/core",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Core ts-rest module for CelCash",
     "type": "module",
     "main": "dist/index.cjs",
@@ -26,10 +26,22 @@
             "import": "./dist/schemas/index.js",
             "require": "./dist/schemas/index.cjs",
             "types": "./dist/schemas/index.d.ts"
+        },
+        "./contracts": {
+            "import": "./dist/contract/index.js",
+            "require": "./dist/contract/index.cjs",
+            "types": "./dist/contract/index.d.ts"
         }
     },
-    "files": ["dist"],
-    "keywords": ["celcash", "sdk", "api", "typescript"],
+    "files": [
+        "dist"
+    ],
+    "keywords": [
+        "celcash",
+        "sdk",
+        "api",
+        "typescript"
+    ],
     "author": "Walaff Fernandes",
     "license": "ISC",
     "homepage": "https://github.com/Pyxlab/celcash/tree/main/packages/core#readme",
