feat: add types.d.ts export in core package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,8 @@
     "files": [
         "dist",
         "schemas.d.ts",
-        "contracts.d.ts"
+        "contracts.d.ts",
+        "types.d.ts"
     ],
     "keywords": [
         "celcash",
