--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -33,10 +33,10 @@
         "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.0.0 || ^7.0.0",
-        "@cel_cash/core": "^1.0.5"
+        "@cel_cash/core": "^1.0.12"
     },
     "devDependencies": {
-        "@cel_cash/core": "1.0.8",
+        "@cel_cash/core": "workspace:*",
         "@nestjs/common": "^10.2.8",
         "@swc/core": "^1.5.7",
         "@types/cache-manager": "^4.0.1",
