chore: update @cel_cash/core package version to 1.0.12

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,14 +33,14 @@
         "url": "https://github.com/Pyxlab/celcash/issues"
     },
     "devDependencies": {
-        "@cel_cash/core": "1.0.8",
+        "@cel_cash/core": "workspace:*",
         "@swc/core": "^1.5.7",
         "@types/node": "^20.12.12",
         "tsup": "^8.0.2",
         "typescript": "^5.4.5"
     },
     "peerDependencies": {
-        "@cel_cash/core": "^1.0.0"
+        "@cel_cash/core": "^1.0.12"
     },
     "dependencies": {
         "@ts-rest/core": "^3.45.2"
