--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cel_cash/client",
-    "version": "1.0.8",
+    "version": "1.0.12",
     "description": "A client sdk for CelCash",
     "type": "module",
     "main": "dist/index.cjs",
@@ -33,7 +33,7 @@
         "url": "https://github.com/Pyxlab/celcash/issues"
     },
     "devDependencies": {
-        "@cel_cash/core": "workspace:*",
+        "@cel_cash/core": "1.0.12",
         "@swc/core": "^1.5.7",
         "@types/node": "^20.12.12",
         "tsup": "^8.0.2",
