--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cel_cash/nestjs",
-    "version": "1.0.8",
+    "version": "1.0.12",
     "description": "",
     "type": "commonjs",
     "main": "dist/index.js",
@@ -36,7 +36,7 @@
         "@cel_cash/core": "^1.0.12"
     },
     "devDependencies": {
-        "@cel_cash/core": "workspace:*",
+        "@cel_cash/core": "1.0.12",
         "@nestjs/common": "^10.2.8",
         "@swc/core": "^1.5.7",
         "@types/cache-manager": "^4.0.1",
