--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "lint": "pnpm biome check src --apply",
         "type-check": "tsc --noEmit",
         "build": "tsup",
         "release": "pnpm release-it"
@@ -71,6 +72,15 @@
         "access": "public"
     },
     "release-it": {
-        "git": false
+        "git": false,
+        "hooks": {
+            "before:init": [
+                "pnpm lint",
+                "pnpm type-check"
+            ],
+            "after:bump": "npm run build",
+            "after:git:release": "echo After git push, before github release",
+            "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+        }
     }
 }
