--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -79,8 +79,7 @@
                 "pnpm type-check"
             ],
             "after:bump": "npm run build",
-            "after:git:release": "echo After git push, before github release",
-            "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+            "after:git:release": "echo After git push, before github release"
         }
     }
 }
