chore: update release-it hooks to include linting and type-checking scripts

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -59,6 +59,14 @@
                     ]
                 }
             }
+        },
+        "hooks": {
+            "before:init": [
+                "pnpm lint",
+                "pnpm type-check"
+            ],
+            "after:bump": "npm run build",
+            "after:git:release": "echo After git push, before github release"
         }
     }
 }
