--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "release-it": "^17.3.0"
     },
     "release-it": {
+        "npm": false,
         "git": {
             "requireCleanWorkingDir": false
         }
