chore: Update @cel_cash/core package version to 1.0.17 in client and nest packages

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,7 +34,7 @@
         "url": "https://github.com/Pyxlab/celcash/issues"
     },
     "devDependencies": {
-        "@cel_cash/core": "1.0.17",
+        "@cel_cash/core": "workspace:*",
         "@swc/core": "^1.5.7",
         "@types/node": "^20.12.12",
         "tsup": "^8.0.2",
@@ -56,7 +56,7 @@
                 "out": {
                     "file": "package.json",
                     "path": [
-                        "devDependencies.@cel_cash/core"
+                        "peerDependencies.@cel_cash/core"
                     ]
                 }
             }
