--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -40,7 +40,7 @@
         "@cel_cash/core": "^1.0.16"
     },
     "devDependencies": {
-        "@cel_cash/core": "1.0.17",
+        "@cel_cash/core": "workspace:*",
         "@nestjs/common": "^10.2.8",
         "@swc/core": "^1.5.7",
         "@types/cache-manager": "^4.0.1",
@@ -59,7 +59,7 @@
                 "out": {
                     "file": "package.json",
                     "path": [
-                        "devDependencies.@cel_cash/core"
+                        "peerDependencies.@cel_cash/core"
                     ]
                 }
             }
