--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cel_cash/client",
-    "version": "1.0.17",
+    "version": "1.0.18",
     "description": "A client sdk for CelCash",
     "type": "module",
     "main": "dist/index.cjs",
@@ -41,7 +41,7 @@
         "typescript": "^5.4.5"
     },
     "peerDependencies": {
-        "@cel_cash/core": "^1.0.16"
+        "@cel_cash/core": "1.0.18"
     },
     "dependencies": {
         "@ts-rest/core": "^3.45.2"
