--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "version": "1.0.17",
     "description": "",
     "main": "index.js",
+    "packageManager": "pnpm@8.15.6",
     "scripts": {
-        "release": "pnpm -r release && pnpm release-it"
+        "build": "turbo build",
+        "type-check": "turbo type-check",
+        "release": "turbo release"
     },
     "keywords": [
         "SDK",
