--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,10 @@
     "type-check": {
       "cache": false
     },
+    "lint": {
+      "dependsOn": ["^lint"],
+      "cache": false
+    },
     "release": {
       "dependsOn": ["^release"],
       "cache": false
