--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -63,7 +63,8 @@
     "devDependencies": {
         "@swc/core": "^1.5.7",
         "tsup": "^8.0.2",
-        "typescript": "^5.4.5"
+        "typescript": "^5.4.5",
+        "vitest": "^1.6.0"
     },
     "dependencies": {
         "zod": "^3.23.8"
