--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,6 +62,7 @@
     },
     "devDependencies": {
         "@swc/core": "^1.5.7",
+        "@types/node": "^20.14.2",
         "tsup": "^8.0.2",
         "typescript": "^5.4.5",
         "vitest": "^1.6.0"
