--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -50,7 +50,8 @@
     },
     "dependencies": {
         "@nestjs/cache-manager": "^2.2.1",
-        "@ts-rest/core": "^3.45.2"
+        "@ts-rest/core": "^3.45.2",
+        "zod": "^3.23.8"
     },
     "release-it": {
         "git": false,
