--- a/packages/adonisjs/package.json
+++ b/packages/adonisjs/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "clean": "del-cli build",
     "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
-    "typecheck": "tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
     "quick:test": "node --import=./tsnode.esm.js --enable-source-maps bin/test.ts",
@@ -100,12 +100,13 @@
     },
     "hooks": {
       "before:init": [
-        "pnpm lint"
+        "pnpm lint",
+        "pnpm type-check"
       ],
       "after:bump": [
-        "npm run prebuild",
-        "npm run build",
-        "npm run postbuild"
+        "pnpm prebuild",
+        "pnpm build",
+        "pnpm postbuild"
       ],
       "after:git:release": "echo After git push, before github release"
     }
