refactor: update CelCashService import in @cel_cash/adonisjs package

--- a/packages/adonisjs/package.json
+++ b/packages/adonisjs/package.json
@@ -20,7 +20,7 @@
     ".": "./build/index.js",
     "./types": "./build/src/types.js",
     "./cel_cash_provider": "./build/providers/cel_cash_provider.js",
-    "./services/main": "./build/src/services/main.js"
+    "./services/main": "./build/services/main.js"
   },
   "scripts": {
     "clean": "del-cli build",
