chore: update Adonis example app configurations and dependencies

--- a/apps/adonis-example/.env.example
+++ b/apps/adonis-example/.env.example
@@ -5,3 +5,9 @@ LOG_LEVEL=info
 APP_KEY=POLm4NjMP5P6CqL4b0QwHK5nvdl7CWql
 NODE_ENV=development
 SESSION_DRIVER=cookie
+CEL_CASH_BASE_URL=https://api.sandbox.cel.cash/v2
+CEL_CASH_ID=5473
+CEL_CASH_HASH=83Mw5u8988Qj6fZqS4Z8K7LzOo1j28S706R0BeFe
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
