--- a/apps/adonis-example/package.json
+++ b/apps/adonis-example/package.json
@@ -55,7 +55,9 @@
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
+    "@adonisjs/redis": "^8.0.1",
     "@adonisjs/session": "^7.4.1",
+    "@cel_cash/adonisjs": "workspace:^",
     "@vinejs/vine": "^2.0.0",
     "better-sqlite3": "^11.0.0",
     "luxon": "^3.4.4",
