chore: update npm dependency to latest stable version

--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -59,6 +59,7 @@
             "@release-it/bumper": {
                 "out": {
                     "file": "package.json",
+                    "prefix": "^",
                     "path": [
                         "peerDependencies.@cel_cash/core"
                     ]
