--- a/packages/adonis/package.json
+++ b/packages/adonis/package.json
@@ -92,6 +92,7 @@
       "@release-it/bumper": {
         "out": {
           "file": "package.json",
+          "prefix": "^",
           "path": [
             "peerDependencies.@cel_cash/core"
           ]
