--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -56,6 +56,7 @@
             "@release-it/bumper": {
                 "out": {
                     "file": "package.json",
+                    "prefix": "^",
                     "path": [
                         "peerDependencies.@cel_cash/core"
                     ]
