feat: optimize rawQuery object validation in api.ts

--- a/packages/adonis/package.json
+++ b/packages/adonis/package.json
@@ -92,7 +92,7 @@
       "@release-it/bumper": {
         "out": {
           "file": "package.json",
-          "prefix": "^",
+          "versionPrefix": "^",
           "path": [
             "peerDependencies.@cel_cash/core"
           ]
