--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -59,7 +59,7 @@
             "@release-it/bumper": {
                 "out": {
                     "file": "package.json",
-                    "prefix": "^",
+                    "versionPrefix": "^",
                     "path": [
                         "peerDependencies.@cel_cash/core"
                     ]
