--- a/packages/nest/package.json
+++ b/packages/nest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cel_cash/nestjs",
-    "version": "2.1.4",
+    "version": "2.1.5",
     "description": "",
     "type": "commonjs",
     "main": "dist/index.js",
@@ -37,7 +37,7 @@
         "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
         "reflect-metadata": "^0.1.12",
         "rxjs": "^6.0.0 || ^7.0.0",
-        "@cel_cash/core": "2.1.4"
+        "@cel_cash/core": "^2.1.5"
     },
     "devDependencies": {
         "@cel_cash/core": "workspace:*",
