--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,10 +1,21 @@
 {
     "compilerOptions": {
-        "target": "es2016",
-        "module": "commonjs",
+        "target": "ESNext",
+        "module": "NodeNext",
+        "lib": ["ESNext"],
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "isolatedModules": true,
+        "removeComments": true,
         "esModuleInterop": true,
+        "strictNullChecks": true,
+        "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true,
-        "strict": true,
+        "strictPropertyInitialization": true,
+        "noImplicitAny": true,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "noImplicitThis": true,
         "skipLibCheck": true
     },
     "include": ["src"],
