--- a/packages/adonis/package.json
+++ b/packages/adonis/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cel_cash/adonisjs",
   "description": "AdonisJS provider for CelCash",
-  "version": "2.1.5-1",
+  "version": "2.2.0",
   "engines": {
     "node": ">=20.6.0"
   },
@@ -79,7 +79,7 @@
   "peerDependencies": {
     "@adonisjs/core": "^6.2.0",
     "@adonisjs/redis": "^8.0.1",
-    "@cel_cash/core": "^2.1.5-1"
+    "@cel_cash/core": "^2.2.0"
   },
   "dependencies": {
     "@ts-rest/core": "^3.45.2",
