--- a/.github/workflows/core.yaml
+++ b/.github/workflows/core.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install
         run: pnpm install --no-frozen-lockfile
       - name: Run lint
-        run: pnpm biome check packages/core
+        run: pnpm biome check packages/core/src
 
   typecheck:
     runs-on: ubuntu-latest
