--- a/turbo.json
+++ b/turbo.json
@@ -1,20 +1,29 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "tasks": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
-    },
-    "type-check": {
-      "cache": false
-    },
-    "lint": {
-      "dependsOn": ["^lint"],
-      "cache": false
-    },
-    "release": {
-      "dependsOn": ["^release"],
-      "cache": false
+    "$schema": "https://turbo.build/schema.json",
+    "tasks": {
+        "build": {
+            "dependsOn": [
+                "^build"
+            ],
+            "outputs": [
+                "dist/**",
+                "build/**"
+            ]
+        },
+        "type-check": {
+            "cache": false
+        },
+        "lint": {
+            "dependsOn": [
+                "^lint"
+            ],
+            "cache": false
+        },
+        "release": {
+            "dependsOn": [
+                "^release"
+            ],
+            "cache": false
+        }
     }
-  }
 }
