--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "devDependencies": {
         "@biomejs/biome": "1.7.3",
         "@release-it/bumper": "^6.0.1",
+        "@ts-rest/core": "^3.45.2",
         "release-it": "^17.3.0",
         "turbo": "^2.0.1",
         "typedoc": "^0.25.13",
+        "typedoc-plugin-external-resolver": "^1.0.3",
         "typedoc-plugin-markdown": "^4.0.3",
         "typedoc-plugin-rename-defaults": "^0.7.0",
         "typedoc-plugin-zod": "^1.1.2"
