chore: update ts-pattern dependency to version 5.1.2

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -86,5 +86,8 @@
             "after:bump": "npm run build",
             "after:git:release": "echo After git push, before github release"
         }
+    },
+    "dependencies": {
+        "ts-pattern": "^5.1.2"
     }
 }
