--- a/packages/adonis/tsconfig.json
+++ b/packages/adonis/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@adonisjs/tsconfig/tsconfig.package.json",
-  "compilerOptions": {
-    "rootDir": "./",
-    "outDir": "./build",
-  }
+    "extends": "@adonisjs/tsconfig/tsconfig.package.json",
+    "compilerOptions": {
+        "rootDir": "./",
+        "outDir": "./build"
+    }
 }
