--- a/packages/adonis/package.json
+++ b/packages/adonis/package.json
@@ -26,8 +26,7 @@
         "clean": "del-cli build",
         "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
         "type-check": "tsc --noEmit",
-        "lint": "eslint . --ext=.ts",
-        "format": "prettier --write .",
+        "lint": "pnpm biome check src --apply",
         "quick:test": "node --import=./tsnode.esm.js --enable-source-maps bin/test.ts",
         "pretest": "npm run lint",
         "test": "c8 npm run quick:test",
@@ -41,8 +40,6 @@
     "devDependencies": {
         "@adonisjs/assembler": "^7.2.3",
         "@adonisjs/core": "^6.3.1",
-        "@adonisjs/eslint-config": "^1.3.0",
-        "@adonisjs/prettier-config": "^1.3.0",
         "@adonisjs/tsconfig": "^1.3.0",
         "@cel_cash/core": "workspace:*",
         "@japa/assert": "^2.1.0",
@@ -52,8 +49,6 @@
         "c8": "^9.1.0",
         "copyfiles": "^2.4.1",
         "del-cli": "^5.1.0",
-        "eslint": "^8.57.0",
-        "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.2"
     },
